--- a/index.html
+++ b/index.html
@@ -4,12 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="/src/web/style.css">
     <link rel="stylesheet" href="/src/web/small.css">
-    <title>Document</title>
+    <title>Mahtamun Hoque Fahim | Senior Graphic Designer</title>
 </head>
 
 <body>
+
+    <!-- home section -->
+    <section class="home" id="home">
+        <main>
+            <h1>Hi,</h1>
+            <h2>My name is <span>Mahtab</span></h2>
+            <p>And I'm designing since 2016.</p>
+        </main>
+    </section>
+    <section class="about" id="about">
+
+    </section>
+    <section class="works" id="works">
+
+    </section>
 
     <!-- Previously worked with section -->
 
@@ -18,7 +35,7 @@
             <p>Previously</p>
             <h2>Worked with</h2>
             <hr>
-            <div class="scroller logo-list" data-speed="slow">
+            <div class="scroller logo-list" data-speed="fast">
                 <ul class="tag-list scroller__inner">
                     <li>
                         <div><img src="/src/media/other-logos/sulphuric-bench.svg" alt="" class="worked-logo"></div>
@@ -65,6 +82,9 @@
             </div>
 
         </div>
+    </section>
+    <section class="gallery" id="gallery">
+
     </section>
 
 
